fix: vertically centre popup icons with text using vertical-align middle

--- a/_sass/components/_dashboard-legend.scss
+++ b/_sass/components/_dashboard-legend.scss
@@ -48,5 +48,6 @@
   width: 12px;
   height: 12px;
   border-radius: 50%;
-  margin-right: 6px;
+  margin-right: 10px;
+  vertical-align: middle;
 }
